--- a/index.html
+++ b/index.html
@@ -12,8 +12,16 @@
       <span class="logo">LOGO</span>
     </div>
     <div class="main">
-      <div class="header"></div>
-      <div class="feed">S</div>
+      <div class="header">
+        <div class="mobileHeader">LOGO</div>
+        <div class="logo2">KG</div>
+      </div>
+      <div class="feed">
+        <div class="pink">
+          <input class="input" type="text" name="" id="" placeholder="THIS IS SECOND COMMIT!" />
+          <input class="button" type="button" value="PASSED" />
+        </div>
+      </div>
     </div>
   </body>
 </html>
